# bastion-navigator

./: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  bastion_navigator_srs_v1.0_en.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
cmd/navigator-cli/: main.go
config/: config.yaml
docs/: API.md  CONFIGURATION.md  INTEGRATION.md  bastion_navigator_srs_v1.0_en.md  hybrid-reranking.md  logical-partitioning.md  source-connectors.md  sub-query-decomposition.md
internal/cache/: cache.go  cache_test.go
internal/cli/: cli.go  commands.go
internal/config/: config.go
internal/embedder/: client.go  embedder.go
internal/metrics/: metrics.go
internal/models/: models.go  types.go
internal/orchestrator/: orchestrator.go  orchestrator_test.go
internal/reranker/: client.go  reranker.go
internal/searcher/: qdrant.go  searcher.go
internal/vault/: client.go  client_test.go  vault.go  vault_integration_test.go
navigator/: chunker.py  cli.py  config.py  connector.py  decomposer.py  embedder.py  evaluator.py  events.py  federation.py  grpc_server.py  hooks.py  hyde.py  main.py  metrics.py  models.py  orchestrator.py  reranker.py  rest.py  router.py  searcher.py  token_rewriter.py  vault_client.py
tests/: docker-compose.test.yml  test_chunker.py  test_evaluator.py  test_events_p1p2.py  test_federation.py  test_flow_priority4.py  test_integration.py  test_latency.py  test_pii_split_guard.py  test_priority3.py  test_priority4.py  test_rest.py  test_router.py  test_router_affinity.py  test_search_loop.py  test_source_attribution.py  test_token_rewriter.py
(+11 files in other folders)
