[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bastion-navigator"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.9",
    "nats-py>=2.7",
    "grpcio>=1.64",
    "prometheus-client>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "redis>=5.0",
]

[project.scripts]
navigator-cli = "navigator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["navigator*"]
